Created db, service and transport layers, done refactoring and refreshed OpenApi
