# api/openapi-spec/build/openapi.yaml
@@ -40,28 +40,27 @@ paths:
     get:
       tags:
         - Health API
-      summary: Check health
-      description: Endpoint for checking health
+      summary: Check healthcheck
+      description: Endpoint for checking healthcheck
       responses:
         '200':
           description: OK
-  /pastes:
-    post:
-      tags:
-        - Pastes API
-      summary: Create paste
-      description: Create paste
-      parameters:
-        - description: Create Paste DTO
-          in: body
-          name: body
-          required: true
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestDTO'
+                $ref: '#/components/schemas/OperationResponseDto'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+  /pastes:
+    get:
+      tags:
+        - Pastes API
+      summary: Get paste
+      description: Get paste by ID
+      parameters:
+        - $ref: '#/components/parameters/PasteId'
       responses:
-        '201':
+        '200':
           $ref: '#/components/responses/PasteResponse'
         '400':
           $ref: '#/components/responses/BadRequestError'
@@ -69,19 +68,19 @@ paths:
           $ref: '#/components/responses/NotFoundError'
         '500':
           $ref: '#/components/responses/InternalServerError'
-  /paste:
-    get:
+    post:
       tags:
         - Pastes API
-      summary: Get paste
-      description: Get paste by ID
-      parameters:
-        - description: Paste ID
-          in: path
-          name: id
-          required: true
+      summary: Create paste
+      description: Create paste
+      requestBody:
+        description: Create Paste DTO
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestDTO'
       responses:
-        '200':
+        '201':
           $ref: '#/components/responses/PasteResponse'
         '400':
           $ref: '#/components/responses/BadRequestError'
@@ -95,16 +94,13 @@ paths:
       summary: Update paste
       description: Update paste
       parameters:
-        - description: Paste ID
-          in: path
-          name: id
-          required: true
-        - description: Update Paste DTO
-          in: body
-          name: body
-          required: true
-          schema:
-            $ref: '#/components/schemas/RequestDTO'
+        - $ref: '#/components/parameters/PasteId'
+      requestBody:
+        description: Update Paste DTO
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestDTO'
       responses:
         '200':
           $ref: '#/components/responses/PasteResponse'
@@ -120,10 +116,7 @@ paths:
       summary: Delete paste
       description: Delete paste
       parameters:
-        - description: Paste ID
-          in: path
-          name: id
-          required: true
+        - $ref: '#/components/parameters/PasteId'
       responses:
         '200':
           $ref: '#/paths/~1health/get/responses/200'
@@ -134,7 +127,14 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 components:
-  parameters: !<tag:yaml.org,2002:js/undefined> ''
+  parameters:
+    PasteId:
+      name: hash
+      in: path
+      description: Paste Hash
+      required: true
+      schema:
+        type: string
   schemas:
     RequestDTO:
       type: object
@@ -156,7 +156,7 @@ components:
           maxLength: 2048
           type: string
         expires:
-          example: '2024-01-02T15:04:05.999Z03:00'
+          example: string
           type: string
       required:
         - content
@@ -166,16 +166,13 @@ components:
       properties:
         id:
           type: string
-          format: uuid
-          example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+          example: Sw4zOAOE
         title:
-          type: string
-        user:
           type: string
         visibility:
           type: object
           properties:
-            visibility:
+            type:
               type: string
             title:
               type: string
@@ -187,18 +184,20 @@ components:
         expires_at:
           type: string
           format: date-time
-    Error:
+    ErrResponseDto:
       type: object
       properties:
+        status:
+          type: string
+        code:
+          type: integer
         error:
           type: string
-    Errors:
+    OperationResponseDto:
       type: object
       properties:
-        errors:
-          items:
-            type: string
-          type: array
+        message:
+          type: string
   responses:
     PasteResponse:
       description: OK
@@ -211,22 +210,16 @@ components:
       content:
         application/json:
           schema:
-            oneOf:
-              - $ref: '#/components/schemas/Error'
-              - $ref: '#/components/schemas/Errors'
+            $ref: '#/components/schemas/ErrResponseDto'
     NotFoundError:
       description: Not Found
       content:
         application/json:
           schema:
-            oneOf:
-              - $ref: '#/components/schemas/Error'
-              - $ref: '#/components/schemas/Errors'
+            $ref: '#/components/schemas/ErrResponseDto'
     InternalServerError:
       description: Internal Server Error
       content:
         application/json:
           schema:
-            oneOf:
-              - $ref: '#/components/schemas/Error'
-              - $ref: '#/components/schemas/Errors'
+            $ref: '#/components/schemas/ErrResponseDto'
